2008-11-05  Neil Roberts  <neil@linux.intel.com>

	* clutter/clutter-color.c (clutter_color_new): Remove CLAMP macros
	around the component parameters because they are guint8 anyway so
	the CLAMP is redundant and it causes a warning.

2008-11-04  Thomas Wood  <thomas@linux.intel.com>

	* clutter/clutter-color.c: Update ClutterColor documentation as
	changes have been backported to 0.8.4.

2008-11-04  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/clutter-script.c: Document the "is-default" member of
	a ClutterStage definition.

2008-11-04  Neil Roberts  <neil@linux.intel.com>

	* clutter/cogl/gl/cogl.c (cogl_perspective): Use the accurate
	64-bit multiplication macro instead of COGL_FIXED_FAST_DIV for
	calculating xmax as was done previously. This fixes
	test-perspective and other tests that had a gone a bit skewiff.

2008-11-04  Neil Roberts  <neil@linux.intel.com>

	Bug 1181 - In Score, timelines, appended at markers, are also
	called on complete

	* clutter/clutter-score.c (start_children_entries): Use the name
	of the marker to start as the data parameter and only start child
	timelines that have the same marker name. Previously the
	ClutterScore would just start all child entries when a marker was
	reached or the timeline completed regardless of whether they were
	added with a marker or not. Thanks to Mihail Naydenov for
	reporting the bug.

2008-11-03  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/cogl/gl/Makefile.am: Whitespace fixes.

	* clutter/cogl/gles/Makefile.am: Put back a missing backslash
	that broke the GLES build.

2008-11-03  Emmanuele Bassi  <ebassi@linux.intel.com>

	Bug 1231 - Build fails in gles flavour in revision 3442

	* clutter/cogl/gles/cogl-context.h: Fix remaining use of
	ClutterFixed over CoglFixed. (Michael Boccara)

2008-11-03  Neil Roberts  <neil@linux.intel.com>

	Bug 1207 - Timelines sometime miss markers

	* clutter/clutter-timeline.c (timeline_timeout_func): Move the